backend/src/main/java/com/example/aiverse/common/error/FieldErrorResponse.java
package com.example.aiverse.common.error;

public record FieldErrorResponse(String field, String message) {
}
